# winforge

./: .gitignore  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queryKeys.ts  types.ts
frontend/src/components/: ErrorBanner.tsx  FileUploadForm.tsx  Layout.tsx  NewLeadModal.tsx  ProposalPanel.tsx  SearchPanel.tsx  StatusBadge.tsx  ThemeToggle.tsx  ValidationPanel.tsx
frontend/src/pages/: Dashboard.tsx  LeadDetail.tsx  LeadsList.tsx
frontend/src/theme/: ThemeProvider.tsx  badges.ts
src/winforge/: chunking.py  cli.py  convert.py  embedding.py  pipeline.py  proposal.py  validation.py  vectorstore.py  viewer.py
src/winforge/api/: db.py  ingest.py  main.py  paths.py  proposal_generation.py  proposal_validation.py  repository.py  schema.sql  schemas.py
src/winforge/api/routes/: leads.py
