[project]
name = "winforge"
version = "0.1.0"
description = "RFP Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.7.2",
    "chromadb>=1.5.9",
    "openai>=2.45.0",
    "pymupdf4llm>=0.0.17",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]

[project.scripts]
winforge = "winforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
